IGNITE-28630: migrate build to Java 17 and newer libraries